# skidbot

./: CMakeLists.txt  README.md  package.xml
gazebo/: gz_rrbot.xacro
launch/: gz_rrbot.launch.py  gz_skidbot.launch.py
src/: cpp_node.cpp
xacro/: rrbot.xacro  skidbot.xacro
