<?xml version="1.0"?>
<package format="2">

  <name>skidbot</name>
  <version>0.1.0</version>
  
  <description>Skid Drive Robot</description>

  <maintainer email="mkhuthir@gmail.com">Muthanna Alwahash</maintainer>

  <license>Apache License 2.0</license>
  
  <url type="repository">https://github.com/mkhuthir/rrbot</url>

  <author>Muthanna Alwahash</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>control_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>rclpy</build_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
